[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDCSL"
version = "0.1.0"
description = "A compact Python tool to check if a Widevine device certificate (DCSL) is revoked or valid."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "ThatNotEasy", email = "apid9755@gmail.me" }
]
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests",
    "argparse",
    "coloredlogs",
    "colorama"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/ThatNotEasy/PyDCSL"

[project.scripts]
PyDCSL = "PyDCSL.__main__:main"
